[project]
name = "evd_warehouse"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.12",
    "dagster-dg-cli==1.13.12",
    "dagster-dlt==0.29.12",
    "dagster-webserver==1.13.12",
    "dlt[filesystem,postgres]==1.28.1",
    "psycopg2-binary>=2.9",
    "grpcio<1.80",
    "grpcio-health-checking<1.80",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warehouse"]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "warehouse"
