[project]
name = "evd-warehouse-etl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "dagster",
  "dagster-webserver",
  "dagster-dbt",
  "duckdb",
  "boto3",
  "psycopg2-binary",
  "dbt-postgres>=1.8,<2.0",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestration/evd_orchestration"]

[tool.uv]
constraint-dependencies = ["greenlet<3.5.0"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
